2011-09-30 Dan Locks <dwlocks@zmanda.com>
	*  packaging/common/substitute.pl: fix PKG_REV missing message.
	*  packaging/sun-pkg/buildpkg, packaging/deb/buildpkg,
	   packaging/rpm/buildpkg: create PKG_REV file until the machinery to
	   process svn tags for PKG_REV is in place

2011-09-29 Dan Locks <dwlocks@zmanda.com>
	*  packaging/sun-pkg: sun package subdirectories
	*  packaging/sun-pkg/buildpkg: sun package building script
	*  packaging/common/mock_utils.sh: mocked utilities used by pre/post
	   scripts
	*  packaging/common/post_inst_functions.sh,
	   packaging/common/post_rm_functions.sh,
	   packaging/common/pre_inst_functions.sh,
	   packaging/common/common_functions.sh: shared shell functions for
	   pre/post scripts.
	*  packaging/common/substitute.pl: update to handle sun packages and
	   shell functions
	*  packaging/common/test_sh_libs.sh: unit tests for shell functions
	*  packaging/common/shunit2: unit test framework
	*  packaging/Makefile.am: add sun package to dist tarball.
	*  note: S3 device is not enabled; solaris compilation has me stumped.

2011-09-21  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Holding.pm: fix dirfn.

2011-09-21  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Sam Stuck
	* man/xml-source/amanda-changers.7.xml: Typo.

2011-09-20  Jean-Louis Martineau <martineau@zmanda.com>
	* man/Makefile.am (SERVER_MAN_PAGES): Add amcleanupdisk.8
	* man/xml-source/amcleanup.8.xml:Add -r option.
	* man/xml-source/amcleanupdisk.8.xml: New man page.
	* perl/Amanda/Holding.pm (all_files, merge_all_files, rename_tmp):
	  New methods.
	* server-src/Makefile.am (amlibexec_PROGRAMS): Remove amcleanupdisk.
	* server-src/Makefile.am (sbin_SCRIPTS_PERL): Add amcleanupdisk.
	* server-src/amcleanup.pl: Add -r option.
	* server-src/amcleanupdisk.c: Remove file
	* server-src/amcleanupdisk.pl: New perl version.
	* server-src/holding.c: Fix max level to 399.

2011-09-07  Jean-Louis Martineau <martineau@zmanda.com>