@@ -1795,6 +1795,10 @@ list_end_element(GMarkupParseContext *context G_GNUC_UNUSED,
         thunk->in_common_prefixes = 0;
     } else if (g_ascii_strcasecmp(element_name, "key") == 0 && thunk->in_contents) {
         thunk->filename_list = g_slist_prepend(thunk->filename_list, thunk->text);
+	if (thunk->is_truncated) {
+	    if (thunk->next_marker) g_free(thunk->next_marker);
+	    thunk->next_marker = g_strdup(thunk->text);
+	}
         thunk->text = NULL;
     } else if (g_ascii_strcasecmp(element_name, "size") == 0 && thunk->in_contents) {
         thunk->size += g_ascii_strtoull (thunk->text, NULL, 10);
@@ -1927,6 +1931,8 @@ s3_list_keys(S3Handle *hdl,
         thunk.in_contents = FALSE;
         thunk.in_common_prefixes = FALSE;
         thunk.is_truncated = FALSE;
+        if (thunk.next_marker) g_free(thunk.next_marker);
+	thunk.next_marker = NULL;
         thunk.want_text = FALSE;
 
         ctxt = g_markup_parse_context_new(&parser, 0, (gpointer)&thunk, NULL);
